Responsive Design for mobile friendly

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href = "fonts/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,7 +15,7 @@
 
     <div class="nav-bar" >
     <h6>
-     <a href="index.html" target="_top">Akash Yadav</a> 
+     <a class="nametohome" href="index.html" target="_top">Akash Yadav</a> 
     <a class="header-link1" href="About/About.html" target="_top">About</a>
     <a class="header-link2" href="https://medium.com/@ay637637" target="_self">Blog</a>
     <a class="header-link3" href="" target="_self">Reading List</a>
@@ -27,7 +28,7 @@
     Hello!
     </h1>
     <h2>
-    I am Akash Yadav. Click <a class = "herelink" href = "" >here</a> to know more about me or <a class="contactmelink" href="">contact me</a>!
+    I am Akash Yadav. Click <a class = "herelink" href = "" >here</a> to know more about me or <a class="contactmelink" href="About/About.html">contact me</a>!
     </h2>
     </div>
  
