--- a/Contact Me/contactme.html
+++ b/Contact Me/contactme.html
@@ -2,25 +2,36 @@
 <html lang="en">
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="contactstyle.css">
     <link rel="stylesheet" href = "fonts/stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Contact Me</title>
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
 
     <div class="nav-bar" >
     <h6>
-     <a class="nametohome" href="index.html" target="_top">Akash Yadav</a> 
+    <a class="nametohome" href="index.html" target="_top">Akash Yadav</a> 
     <a class="header-link1" href="About/About.html" target="_top">About</a>
     <a class="header-link2" href="https://medium.com/@ay637637" target="_self">Blog</a>
     <a class="header-link3" href="" target="_self">Reading List</a>
     <a class="header-link4" href="" target="_self">Contact Me!</a>
     </h6>
+    </div>
+    
+    <div>
+        <h1>Contact me :)</h1>
+        <h2>
+            <br>
+        Email: <a style="color:rgb(101, 101, 235);" href="mailto:2000520200011@ietlucknow.ac.in">2000520200011@ietlucknow.ac.in</a> / <a style="color:rgb(101, 101, 235);" href="mailto:akashyadav.iet@gmail.com">akashyadav.iet@gmail.com</a><br><br>
+        Location: <br><br>IET Lucknow, Sitapur Road, Lucknow - 226021
+        <br><br>
+        <i class="fa fa-arrow-left"></i> Here are some social buttons as well! 
+    </h2>
     </div>
 
 
